[gd_scene load_steps=13 format=3 uid="uid://byn3ew2h6ybu2"]

[ext_resource type="Script" uid="uid://dwwnrc47xs3p2" path="res://Scenes/Main/LivingRoom/living_room.gd" id="1_7vulj"]
[ext_resource type="Script" uid="uid://bilosec402sin" path="res://Scenes/Main/LivingRoom/table.gd" id="2_i5ayr"]
[ext_resource type="Texture2D" uid="uid://bv4l8ald5semb" path="res://Sprites/Objects/table.png" id="3_4umm3"]
[ext_resource type="Texture2D" uid="uid://qxh4w8r6ji42" path="res://Sprites/Objects/Buildings/door_frame.png" id="3_i5ayr"]
[ext_resource type="Texture2D" uid="uid://dldkm8qagbeo3" path="res://Sprites/Objects/living_room.png" id="4_5w34m"]
[ext_resource type="Script" uid="uid://cg6adxv4hq02f" path="res://Scenes/Main/LivingRoom/cauldron.gd" id="5_8gl61"]
[ext_resource type="Texture2D" uid="uid://d33aykunpyfmk" path="res://Sprites/Objects/Buildings/cauldron_full.png" id="6_vhslw"]
[ext_resource type="Texture2D" uid="uid://larehmxkm3y3" path="res://Sprites/Objects/Buildings/cauldron.png" id="7_lcg6r"]
[ext_resource type="Script" uid="uid://pr87k3eake4k" path="res://Scenes/Main/Buildings/building_interaction.gd" id="8_ak6et"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7x3rb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vhslw")
}],
"loop": true,
"name": &"Brew",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_lcg6r")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_weoqq"]
radius = 170.35

[sub_resource type="CircleShape2D" id="CircleShape2D_wo8wd"]
radius = 213.53

[node name="LivingRoom" type="Node2D"]
script = ExtResource("1_7vulj")

[node name="LivingRoom" type="Sprite2D" parent="."]
position = Vector2(1213, 190)
scale = Vector2(2.6958, 2.44405)
texture = ExtResource("4_5w34m")
metadata/_edit_lock_ = true

[node name="Wall" type="StaticBody2D" parent="LivingRoom"]
position = Vector2(-493.382, -90.0783)
scale = Vector2(0.846281, 0.933454)
metadata/_edit_lock_ = true

[node name="WallCollision" type="CollisionPolygon2D" parent="LivingRoom/Wall"]
visible = false
polygon = PackedVector2Array(1040, 405, 860, 429, 842, 416, 838, 377, 758, 377, 757, 389, 420, 392, 409, 377, 294, 376, 274, 387, 273, 416, 84, 548, 59, 546, 57, 565, 47.3654, 576.905, 78.4864, 628.627, 1125.65, 645.722, 1184.82, 640.901, 1187.89, 582.603, 1190.96, 646.16, 48.2419, 647.475, 50.4335, 15.4097, 337.099, 12.3414, 1145.81, 11.4648, 1184.38, 8.39652, 1188, 561, 1188, 581, 1186.58, 582.603, 1146.25, 571.645, 1142.3, 492.308, 1124.77, 477.843, 1126.09, 463.379, 1175.18, 458.995, 1175.18, 405.081, 1128.72, 404.205)
metadata/_edit_lock_ = true

[node name="Door" type="Area2D" parent="LivingRoom"]
visible = false
position = Vector2(360.932, 356.376)
collision_mask = 2

[node name="DoorCollision" type="CollisionPolygon2D" parent="LivingRoom/Door"]
position = Vector2(-364.27, -351.875)
scale = Vector2(1, 1.00689)
polygon = PackedVector2Array(390.978, 279.167, 284.145, 296.64, 359.077, 384.82, 467.022, 380.35, 502.262, 351.092, 503.004, 280.386)

[node name="StorageInteraction" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("8_ak6et")

[node name="StorageInteractionShape" type="CollisionPolygon2D" parent="StorageInteraction"]
position = Vector2(1213, 190)
scale = Vector2(2.6958, 2.44405)
polygon = PackedVector2Array(-450.33, -68.7384, -453.669, 342.464, -380.963, 342.464, -297.129, 382.971, -222.197, 323.234, -206.618, 265.134, -260.776, -30.6868)

[node name="LivingRoomFromOutside" type="Node2D" parent="."]
position = Vector2(2178, 1057)

[node name="PlayerSpawn" type="Node2D" parent="." groups=["spawns"]]
unique_name_in_owner = true
position = Vector2(1834, 1111)

[node name="OcclusionObjects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="DoorFrame" type="Sprite2D" parent="OcclusionObjects"]
position = Vector2(2523, 1053)
scale = Vector2(2.6958, 2.44405)
texture = ExtResource("3_i5ayr")
offset = Vector2(0, -178.005)

[node name="Cauldron" type="Area2D" parent="OcclusionObjects"]
position = Vector2(108, 1224)
scale = Vector2(1.824, 1.824)
script = ExtResource("5_8gl61")

[node name="CauldronSprite" type="AnimatedSprite2D" parent="OcclusionObjects/Cauldron"]
scale = Vector2(0.313477, 0.313477)
sprite_frames = SubResource("SpriteFrames_7x3rb")
animation = &"Brew"
metadata/_edit_lock_ = true

[node name="CauldronCollision" type="CollisionPolygon2D" parent="OcclusionObjects/Cauldron"]
scale = Vector2(0.313477, 0.313477)
polygon = PackedVector2Array(-10, -326.1, -10, -325, -58.1, -323, -73.1, -323, -121.2, -317, -129.2, -317, -180.4, -306, -184.4, -306, -227.4, -290, -230.6, -290, -244.6, -281, -246.8, -281, -260.9, -268, -262.3, -268, -273.3, -244, -274.7, -244, -276, -236.2, -276, -218.6, -272, -207.6, -272, -204.3, -259, -187.4, -259, -185.1, -247.2, -175.3, -252.6, -168.6, -271, -188.8, -271, -190.3, -296.6, -202, -319.4, -202, -330.4, -198, -333.6, -198, -351.6, -186, -354.1, -186, -362.1, -174, -363.4, -174, -368.4, -160, -369.9, -160, -372, -130.1, -372, -120.6, -369, -112.6, -369, -109.4, -359, -94.4, -359, -92.1, -346, -81.1, -346, -79.7, -335, -74.8, -335, -73.4, -305.4, -66.3, -312, -29.2, -312, 13.2, -304, 54.4, -304, 58.4, -290, 91.3, -290, 94.5, -271, 126.4, -271, 128.7, -242, 163.6, -242, 165.9, -210.9, 192.9, -216.1, 202, -217.6, 202, -224, 230.8, -224, 236.3, -220, 249.2, -220, 252.6, -214, 261.6, -214, 264, -196, 277.9, -196, 279.5, -179, 284.4, -179, 286, -163.7, 286, -148.7, 281, -145.4, 281, -136.4, 275, -134.1, 275, -123.1, 263, -121.8, 263, -110.5, 243.3, -66, 253.5, -66, 254.8, -19, 259.8, -19, 261.1, 30.1, 259, 40.2, 259, 77.4, 252, 82.3, 252, 109.3, 243, 109.9, 243, 122, 262.6, 122, 265, 132, 272.9, 132, 274.3, 148, 281.2, 148, 282.6, 161.8, 286, 177.4, 286, 187.4, 282, 190.6, 282, 200.5, 275, 202.9, 275, 212.9, 263, 214.5, 263, 222.5, 237, 224.3, 237, 221, 215.7, 221, 211.5, 210, 192.5, 210, 191.9, 222.7, 181, 224.9, 181, 249.8, 155, 251, 155, 265, 135, 266.2, 135, 293.2, 84, 294.5, 84, 301.5, 61, 302.7, 61, 310.7, 12, 312, 12, 312, -30.2, 306, -63.4, 306, -65.6, 327.3, -72, 330.6, -72, 344.6, -81, 347, -81, 363, -102, 364.5, -102, 371.5, -124, 373.1, -124, 372, -146.1, 372, -152.4, 365, -168.4, 365, -170.8, 351, -186.8, 351, -188.2, 334, -197.3, 334, -198.6, 319.2, -202, 302.7, -202, 290.7, -198, 287.4, -198, 274.5, -190, 272.1, -190, 256, -170.7, 256, -169, 253.6, -167.2, 252.8, -168, 252, -168, 246.2, -175.4, 266.9, -198, 268.4, -198, 277, -221.6, 277, -236.3, 272, -250.5, 272, -253.7, 264, -263.7, 264, -266, 240, -284, 240, -285.4, 194, -302.5, 194, -303.6, 142, -314.7, 142, -315.8, 68, -322.9, 68, -323.9)
metadata/_edit_lock_ = true

[node name="InteractionRange" type="Area2D" parent="OcclusionObjects/Cauldron"]
collision_mask = 2
script = ExtResource("8_ak6et")
metadata/_edit_lock_ = true

[node name="InteractionShape" type="CollisionShape2D" parent="OcclusionObjects/Cauldron/InteractionRange"]
position = Vector2(24.1228, -47.6974)
shape = SubResource("CircleShape2D_weoqq")
metadata/_edit_lock_ = true

[node name="BrewTimer" type="Timer" parent="OcclusionObjects/Cauldron"]
wait_time = 3.0

[node name="Table" type="StaticBody2D" parent="OcclusionObjects"]
position = Vector2(1215, 1292)
scale = Vector2(2.28, 2.28)
script = ExtResource("2_i5ayr")
metadata/_edit_lock_ = true

[node name="TableHitbox" type="CollisionPolygon2D" parent="OcclusionObjects/Table"]
position = Vector2(-584, -580)
polygon = PackedVector2Array(459, 435, 429.614, 493.596, 431, 583, 583.942, 583, 740, 583, 737.509, 489.649, 700, 434)

[node name="TableSprite" type="Sprite2D" parent="OcclusionObjects/Table"]
position = Vector2(-1, -482)
scale = Vector2(1.182, 1.071)
texture = ExtResource("3_4umm3")
metadata/_edit_lock_ = true

[node name="InteractionRange" type="Area2D" parent="OcclusionObjects/Table"]

[node name="InteractionRadius" type="CollisionShape2D" parent="OcclusionObjects/Table/InteractionRange"]
position = Vector2(4.82456, -97.3684)
shape = SubResource("CircleShape2D_wo8wd")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="LivingRoom/Door" to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="LivingRoom/Door" to="." method="_on_door_body_exited"]
[connection signal="player_entered_range" from="StorageInteraction" to="." method="_on_storage_interaction_player_entered_range"]
[connection signal="player_left_range" from="StorageInteraction" to="." method="_on_storage_interaction_player_left_range"]
[connection signal="player_entered_range" from="OcclusionObjects/Cauldron/InteractionRange" to="OcclusionObjects/Cauldron" method="_on_interaction_range_player_entered_range"]
[connection signal="player_left_range" from="OcclusionObjects/Cauldron/InteractionRange" to="OcclusionObjects/Cauldron" method="_on_interaction_range_player_left_range"]
[connection signal="timeout" from="OcclusionObjects/Cauldron/BrewTimer" to="OcclusionObjects/Cauldron" method="_on_brew_timer_timeout"]
[connection signal="body_entered" from="OcclusionObjects/Table/InteractionRange" to="OcclusionObjects/Table" method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="OcclusionObjects/Table/InteractionRange" to="OcclusionObjects/Table" method="_on_interaction_range_body_exited"]
